--- a/style.css
+++ b/style.css
@@ -8,20 +8,37 @@ font-family: "Squada One", sans-serif;
 font-style:italic;
 }
 
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#first {
+    width: 70px;
+    
+}
+#second {
+    width: 70px;
+    
+}
 #logo {
-    height: 80px;
-    margin-top: 10px;
-    margin-left: 43%;
+    margin: auto;
+    width: 200px;
+    margin-top: 20px;
+
    
 }
 
 #desc {
-    margin-left : 36%;
+    text-align: center;
+    font-size: 30px;
 }
+
 #play_button {
-  
+    max-width: 450px;
     margin: auto;
-    width:450px;
+    margin-top: 0;
+    width:80%;
     height:200px;
     font-size: 130px;
     transition: all 300ms ease-in;
@@ -36,8 +53,9 @@ font-style:italic;
 #word1 {
     font-family: "Yeseva One", serif;
     margin: auto;
+    width:80%;
     margin-bottom: 40px;
-    width:450px;
+    max-width:450px;
     height: 50px;
     transition: all 300ms ease;
     text-align: center;
@@ -52,8 +70,9 @@ font-style:italic;
 #word2 {
     font-family: "Yeseva One", serif;
     margin: auto;
+    width:80%;
     margin-bottom: 40px;
-    width:450px;
+    max-width:450px;
     height: 50px;
     transition: all 300ms ease;
     text-align: center;
@@ -68,8 +87,9 @@ font-style:italic;
 #word3 {
     font-family: "Yeseva One", serif;
     margin: auto;
+    width:80%;
     margin-bottom: 40px;
-    width:450px;
+    max-width:450px;
     height: 50px;
     transition: all 300ms ease;
     text-align: center;
@@ -81,26 +101,47 @@ font-style:italic;
     box-shadow:  9px 9px 18px rgb(234, 175, 234),
                  -9px -9px 18px #ffffff;
 }
-#app {
-    font-size: 30px;
-   margin-top: 20px;
+
+#color {
+  
+    margin: 0.2em;
     position: absolute;
-    height: 50px;
-    width:100px;
-    text-align: center;
+    scale: 70%;
     box-sizing:border-box ;
-    padding-top:10px;
-    
+    padding-top: 0.5em;
+    height: 80px;
+    width:100px;
+    justify-content: center;
     border-radius: 15px;
     background: rgb(254, 240, 255);
     box-shadow:  9px 9px 18px rgb(234, 175, 234),
                  -9px -9px 18px #ffffff;
 }
+#picker {
+    margin-left: 1.5em;
+    width:60px;
+    background-color:rgb(254, 240, 255);
+    border: 0px;
+    box-shadow:  -20px -20px -18px rgb(234, 175, 234),
+                 9px 9px 18px #ffffff;
+              
+}
+#app {
+    font-size: 30px;
+ 
+    
+   
+    text-align: center;
+  
+    
+   
+}
 #word4 {
     font-family: "Yeseva One", serif;
     margin: auto;
     margin-bottom: 40px;
-    width:450px;
+    width:80%;
+    max-width:450px;
     height: 50px;
     transition: all 300ms ease;
     text-align: center;
@@ -117,8 +158,9 @@ font-style:italic;
     font-size: 30px;
     margin: auto;
     margin-bottom: 40px;
+    width:80%;
     height: 80px;
-    width:450px;
+    max-width:450px;
     text-align: center;
     box-sizing:border-box ;
     padding-top:25px;
@@ -136,9 +178,9 @@ font-style:italic;
     margin: auto;
     box-sizing: border-box;
     padding-top: 20px;
-    
+    width:80%;
     height: 400px;
-    width: 30%;
+     max-width: 450px;
     text-align: center;
     display: none;
     border-radius: 40px;
@@ -170,8 +212,27 @@ font-style:italic;
 }
 
 .otv {
-    
     font-size: 40px;
+}
+
+#discovered {
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    font-family: "Squada One", sans-serif;
+   
+}
+
+#wrong_answers {
+    position: fixed;
+    top: 30px;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    font-family: "Squada One", sans-serif;
+ 
 }
 
 #play_button:hover {
@@ -205,4 +266,24 @@ font-style:italic;
     box-shadow:  0 0 0 rgb(234, 175, 234),
     0 0 0 #ffffff;
     
+}
+@media (max-width: 800px) {
+    #logo {
+        margin: auto;
+        width: 30%;
+        margin-top: 20px;
+    
+       
+    }
+    #desc {
+        font-size: 7vw;
+        margin-bottom: 10vw;
+    }
+   /* #play_button {
+        margin-top: 8em;
+        
+    }*/
+  /* #word1 {
+        height: 60%;
+    }*/
 }
