--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ font-style:italic;
 }
 
 #discovered {
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 20px;
     display: flex;
@@ -226,7 +226,7 @@ font-style:italic;
 }
 
 #wrong_answers {
-    position: fixed;
+    position: absolute;
     top: 30px;
     right: 20px;
     display: flex;
