--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ font-style:italic;
 }
 
 #discovered {
+padding-right: 20px;
     position: absolute;
     top: 10px;
     right: 30px;
@@ -226,6 +227,7 @@ font-style:italic;
 }
 
 #wrong_answers {
+	padding-right: 20px;
     position: absolute;
     top: 30px;
     right: 30px;
