--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ font-style:italic;
 
 #discovered {
 padding-right: 20px;
+margin-right: 20px;
     position: absolute;
     top: 10px;
     right: 30px;
@@ -228,6 +229,7 @@ padding-right: 20px;
 
 #wrong_answers {
 	padding-right: 20px;
+	margin-right: 20px;
     position: absolute;
     top: 30px;
     right: 30px;
